<resources>
    <string name="app_name">Play Box</string>
    <string name="app_title">Play Box</string>
    <string name="pictionary">Pictionary</string>
    <string name="rules">Rules</string>
    <string name="play">Play</string>
    <string name="classic">Classic Game</string>
    <string name="teams">Teams Game</string>
    <string name="pictionary_rules_classic">You have to chose a person that will show the slogans to the rest.\n\n
    Then the person draws the slogan and starts to show it.\n\n
    He has only 2 minutes to make the slogan guessed.\n\n
    The person that guessed the slogan correct is the next to show.\n\n</string>
    <string name="pictionary_rules_teams">Divide yourselves into 2 teams.\n\n
    Each team chooses the person that will show the slogans.\n\n
    Delegates stand before teams and draw slogans to show and start showing - each person shows slogan to his team.\n\n
    If the teams guessed their slogan - they get the point, but if they guessed the enemies slogan - the enemies get the point\n\n</string>
    <string name="show_word">Show slogan</string>
    <string name="back">Back</string>
    <string name="toast_no_slogan">Couldn\'t fetch slogan, try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>