<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.pictionary.PictionaryRulesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/rules"
                android:gravity="center"
                android:textSize="50dip"
                android:fontFamily="@font/dustismo_bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/classic"
                android:gravity="center"
                android:textSize="35dip"
                android:fontFamily="@font/dustismo_bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/pictionary_rules_classic"
                android:gravity="center"
                android:textSize="25dip"
                android:fontFamily="@font/dustismo_bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/teams"
                android:gravity="center"
                android:textSize="35dip"
                android:fontFamily="@font/dustismo_bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/pictionary_rules_teams"
                android:gravity="center"
                android:textSize="25dip"
                android:fontFamily="@font/dustismo_bold"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>