<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.pictionary.PictionaryMainMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/charade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <Button
            android:id="@+id/pictionary_button_classic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background_yellow_light"
            android:fontFamily="@font/dustismo_bold"
            android:text="@string/classic"
            android:textSize="20dip"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2"
            app:layout_constraintWidth_percent="0.6" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pictionary_button_classic" />

        <Button
            android:id="@+id/pictionary_button_teams"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background_yellow_dark"
            android:fontFamily="@font/dustismo_bold"
            android:text="@string/teams"
            android:textSize="20dip"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3"
            app:layout_constraintWidth_percent="0.6" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pictionary_button_teams" />

        <Button
            android:id="@+id/pictionary_button_rules"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background_yellow_medium"
            android:fontFamily="@font/dustismo_bold"
            android:text="@string/rules"
            android:textSize="20dip"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view4"
            app:layout_constraintWidth_percent="0.6" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>